--- a/component.html
+++ b/component.html
@@ -11,7 +11,8 @@
       <app-header>
         <!--  아래에서 정의한 app-header라는 컴포넌트 태그가 되고  이 부분에서 컴포넌트에 적용한 내용이 반영되어 화면에 나타난다.-->
       </app-header>
-      <app-content />
+      <app-content></app-content>
+      <app-footer></app-footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
@@ -27,8 +28,16 @@
       Vue.component("app-content", {
         template: "<div>contents</div>",
       });
+
       new Vue({
         el: "#app", // div 라고 태그를 적어주어도 되지만 고유한것을 넣어주어야함. // 인스턴스 영역 지정!
+        components: {
+          // 지역 컴포넌트 등록방식
+          // '컴포넌트 이름':"컴포넌트 내용"
+          "app-footer": {
+            template: "<footer>푸터</footer>",
+          },
+        },
       });
       //   인스턴스를 생성시 그건 기본적으로 Root컴포넌트가 됨!
     </script>
