--- a/component.html
+++ b/component.html
@@ -11,7 +11,10 @@
       <app-header>
         <!--  아래에서 정의한 app-header라는 컴포넌트 태그가 되고  이 부분에서 컴포넌트에 적용한 내용이 반영되어 화면에 나타난다.-->
       </app-header>
-      <app-content></app-content>
+      <app-footer></app-footer>
+    </div>
+    <div id="app2">
+      <app-header></app-header>
       <app-footer></app-footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -40,6 +43,10 @@
         },
       });
       //   인스턴스를 생성시 그건 기본적으로 Root컴포넌트가 됨!
+
+      new Vue({
+        el: "#app2",
+      });
     </script>
   </body>
 </html>
