--- a/event-emit.html
+++ b/event-emit.html
@@ -11,6 +11,7 @@
       <!-- <app-header v-on:pass="logText"></app-header> -->
       <app-header @pass="logText"></app-header>
       <app-content @increase="sumNumber"></app-content>
+      <p>{{ num }}</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
@@ -44,7 +45,7 @@
             console.log("hi");
           },
           sumNumber() {
-            console.log(this.num++);
+            this.num++;
           },
         },
         data: {
