--- a/router.html
+++ b/router.html
@@ -8,6 +8,12 @@
   <body>
     <div id="app">
       <!-- url에 따라 뿌려지는 영역 -->
+      <!-- router에 연결해둔 해당 주소에 접근할 수 있게 router-link태그를 만들어줌 -->
+      <div>
+        <router-link to="/login">Login</router-link>
+        <!-- router-link라는 태그는 a태그로 변환된다. -->
+        <router-link to="/main">Main</router-link>
+      </div>
       <router-view></router-view>
     </div>
     <!-- 순서 중요!! 먼저 vue를 받아야함! -->
@@ -31,6 +37,7 @@
           {
             // 페이지의 url이름
             path: "/login",
+            name:"login",
 
             // 해당 url에서 표시될 컴포넌트
             component: LoginComponent,
