--- a/axios.html
+++ b/axios.html
@@ -9,6 +9,7 @@
     <div id="app">
 
         <button @click="getData">get user</button>
+        <div v-for="user in users">{{ user.name }}</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>   
