--- a/data-binding.html
+++ b/data-binding.html
@@ -9,6 +9,13 @@
     <div id="app">
       <p v-bind:id="uuid" :class="name">{{num}}</p>
       <p>{{doubleNum}}</p>
+      <!-- vue 디렉티브 조작하기  -->
+
+      <!-- 유저가 로그인하기 전 로딩상태 -->
+      <div v-if="load">Loading ...</div>
+
+      <!-- 유저가 로그인 한 후 로그인 상태표시 -->
+      <div v-else>test user has been logged in</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script>
@@ -18,6 +25,7 @@
           num: 10,
           uuid: "1234555",
           name: "text-blue",
+          load: false, // 로딩이 아닐때
         },
         computed: {
           doubleNum() {
