--- a/data-binding.html
+++ b/data-binding.html
@@ -16,6 +16,7 @@
 
       <!-- 유저가 로그인 한 후 로그인 상태표시 -->
       <div v-else>test user has been logged in</div>
+      <div v-show="load">Loading ...</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script>
